# rust-arpg

./: .gitignore  Cargo.toml  smoke_boot_stderr_audit.txt  smoke_fix_stderr.txt  smoke_runtime_stderr.txt
.cargo/: config.toml
assets/shaders/: fog_overlay.wgsl
src/: camera.rs  combat.rs  debug.rs  hud.rs  main.rs  rng.rs  targeting.rs
src/enemy/: arrow.rs  goblin.rs  mod.rs  rat.rs
src/player/: animation.rs  mod.rs  spawn.rs  systems.rs
src/world/: floor.rs  fog.rs  mod.rs  room.rs  tilemap.rs
