[package]
name = "rust-arpg"
version = "0.1.0"
edition = "2021"

[dependencies]
smallvec = "1"
bevy = { version = "0.15", default-features = false, features = [
    "bevy_asset",
    "bevy_gilrs",
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_sprite",
    "bevy_color",
    "multi_threaded",
    "bevy_text",
    "bevy_ui",
    "default_font",
    "bevy_audio",
    "png",
    "wayland",
    "x11",
] }

[profile.dev]
opt-level = 1
debug = 1
codegen-units = 256
incremental = true

[profile.dev.package."*"]
opt-level = 1

[profile.play]
inherits = "dev"
opt-level = 2
codegen-units = 64

[profile.play.package."*"]
opt-level = 3
